Add Docker support with Dockerfile, entrypoint script, and .dockerignore; update .env.template for configuration; modify medusa-config for environment variables; add predeploy script to package.json

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,28 +1,20 @@
-NODE_ENV=development
-# REDIS_URL=redis://localhost:6379 # Optional - falls back to simulated redis
-ADMIN_CORS=http://localhost:7000,http://localhost:7001,https://docs.medusajs.com
-STORE_CORS=http://localhost:8000,https://docs.medusajs.com
-AUTH_CORS=http://localhost:7000,http://localhost:7001,https://docs.medusajs.com
-JWT_SECRET=supersecret
-COOKIE_SECRET=supersecret
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/medusa # Make sure this database exist - or change connection string to an online database
-
-MEDUSA_ADMIN_EMAIL=admin@yourmail.com
-MEDUSA_ADMIN_PASSWORD=supersecret
-
-STRIPE_API_KEY=
-STRIPE_WEBHOOK_SECRET=
-
-SENDGRID_API_KEY=
-SENDGRID_FROM=
-
-# MinIO Storage Configuration (Optional - falls back to local storage)
-# MINIO_ENDPOINT=your-minio-endpoint
-# MINIO_ACCESS_KEY=your-access-key
-# MINIO_SECRET_KEY=your-secret-key
-# MINIO_BUCKET=custom-bucket-name # Optional - defaults to 'medusa-media'
-
-# Meilisearch Configuration (Optional)
-# MEILISEARCH_HOST=your-meilisearch-host # e.g. http://localhost:7700
-# MEILISEARCH_MASTER_KEY=your-master-key # Required if MEILISEARCH_ADMIN_KEY is not set
-# MEILISEARCH_ADMIN_KEY=your-admin-key # Optional - if not set, will be fetched using master key
+ADMIN_CORS=http://localhost:9000,https://xxxxx
+AUTH_CORS=http://localhost:9000,https://xxxxx
+COOKIE_SECRET=xxxx
+DATABASE_URL=postgres://postgres:xxxx@xxxx:5432/postgres?ssl_mode=disable
+DISABLE_MEDUSA_ADMIN=false
+JWT_SECRET=xxxx
+MEDUSA_BACKEND_URL=https://msrv.xxxx.com
+MEDUSA_WORKER_MODE=server
+REDIS_URL=redis://default:xxxx@xxx:6379/0
+RESEND_API_KEY=xxxxx
+RESEND_FROM_EMAIL=noreply@xxxx.com
+S3_ACCESS_KEY_ID=xxxx
+S3_BUCKET=xxxx
+S3_ENDPOINT=https://s3.xxxx.com
+S3_FILE_URL=https://s3.xxxx.com/xxx
+S3_REGION=us-east-1
+S3_SECRET_ACCESS_KEY=xxxx
+STORE_CORS=http://localhost:8000,https://xxxx.com
+STRIPE_API_KEY=xxxxx
+STRIPE_WEBHOOK_SECRET=xxxxx
