--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "ib": "init-backend",
     "start": "init-backend && cd .medusa/server && medusa start --verbose",
     "dev": "medusa develop",
+    "predeploy": "medusa migrations run",
     "email:dev": "email dev --dir=./src/modules/email-notifications/templates --port=3002"
   },
   "dependencies": {
@@ -60,7 +61,6 @@
     "typescript": "^5.7.2",
     "vite": "^5.4.11"
   },
-  "packageManager": "pnpm@9.10.0",
   "engines": {
     "node": "22.x",
     "npm": "10.x"
