--- a/medusa-backend/package.json
+++ b/medusa-backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-medusa-store",
+  "name": "medusa-backend",
   "version": "0.0.1",
   "description": "A starter for Medusa projects.",
   "author": "Medusa (https://medusajs.com)",
@@ -22,12 +22,12 @@
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
-    "@medusajs/admin-sdk": "2.6.1",
-    "@medusajs/cli": "2.6.1",
-    "@medusajs/framework": "2.6.1",
-    "@medusajs/medusa": "2.6.1",
-    "@medusajs/ui-preset": "2.6.1",
-    "@medusajs/icons": "2.6.1",
+    "@medusajs/admin-sdk": "2.7.1",
+    "@medusajs/cli": "2.7.1",
+    "@medusajs/framework": "2.7.1",
+    "@medusajs/medusa": "2.7.1",
+    "@medusajs/ui-preset": "2.7.1",
+    "@medusajs/icons": "2.7.1",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
@@ -35,16 +35,13 @@
     "@medusajs/notification-sendgrid": "latest",
     "@medusajs/workflow-engine-redis": "latest",
     "@react-email/components": "^0.0.26",
-    "@rokmohar/medusa-plugin-meilisearch": "^1.0.3",
-    "medusajs-launch-utils": "latest",
-    "minio": "^8.0.3",
-    "resend": "4.0.1",
-    "ulid": "^2.3.0",
     "awilix": "^8.0.1",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "minio": "^8.0.3",
+    "resend": "4.0.1"
   },
   "devDependencies": {
-    "@medusajs/test-utils": "2.6.1",
+    "@medusajs/test-utils": "2.7.1",
     "@mikro-orm/cli": "6.4.3",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
@@ -59,8 +56,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "vite": "^5.2.11",
-    "yalc": "^1.0.0-pre.53",
-    "react-email": "^3.0.4"
+    "yalc": "^1.0.0-pre.53"
   },
   "engines": {
     "node": ">=20"
